[package]
name = "bendy-tracer"
authors = ["Simone Walter <waltersz@protonmail.com>"]
version = "0.1.0"
edition = "2021"
description = "An experiment to make a pathtracer that can simulate gravitational lensing"
repository = "https://github.com/soycan-sim/bendy-tracer"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.58"
approx = "0.5.1"
clap = { version = "3.2.10", features = ["derive", "cargo", "unicode", "wrap_help"] }
glam = { version = "0.21.2", features = ["approx", "serde", "debug-glam-assert", "rand"] }
hashbrown = { version = "0.12.2", features = ["serde", "rayon"] }
image = "0.24.2"
minifb = "0.23.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.5.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
